# aoc2022-rust

day01/: Cargo.toml
day01/src/: main.rs
day02/src/: main.rs
day06/: Cargo.toml
day09/: Cargo.toml  index.html
day09/src/: main.rs  parse.rs
day3/src/: main.rs
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: grid.rs  main.rs
